[package]
name = "mqtt-actor"
version = "1.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "4.0", features = ["derive", "env"] }
csv = "1.1"
env_logger = "0.9"
glob = "0.3"
log = "0.4"
notify = "5.0.0-pre.13"
paho-mqtt = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
